mariadb-test/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb
  namespace: mariadb-test
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              networkClass: Database
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: vaultwarden
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: ucdialplans
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
    - from:
        - podSelector: {}
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              networkClass: Database
      ports:
        - port: 3306
    - to:
        - podSelector: {}
    - to:
        - ipBlock:
            cidr: 192.18.153.11/32
        - ipBlock:
            cidr: 192.18.152.199/32
